--- a/pfecollector/package.json
+++ b/pfecollector/package.json
@@ -16,6 +16,8 @@
     "react": "^16.13.1",
     "react-bootstrap": "^1.4.0",
     "react-dom": "^16.13.1",
+    "react-notifications": "^1.7.2",
+    "react-notifications-component": "^3.0.3",
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
